--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-github-calendar": "^2.0.2",
     "react-parallax-tilt": "^1.4.68",
     "react-particles-js": "^3.4.1",
+    "react-photoswipe-gallery": "^1.3.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typewriter-effect": "^2.17.0",
